[Feature]: Animated palette and template support (#788)